# fsdc-webapp

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose-db.yml  docker-compose-demo.yml  docker-compose-prod.yml  docker-compose.yml  env.py  example.env  manage.py  package-lock.json  package.json  password.txt  pyproject.toml  requirements.txt  start.sh  tsconfig.app.json  vite.config.ts
.github/workflows/: docker-build-dev.yml  docker-build-prod.yml  docker-build-stage.yml
dashboard/: forms.py  urls.py  views.py
dashboard/templates/: base.html  create_entry.html  home.html  login.html
data_apps/: urls.py  views.py
data_apps/templates/: awards.html  imports_exports.html  indice_consumidor.html
escala-seguridad-alimentaria-pr/: package-lock.json  package.json
escala-seguridad-alimentaria-pr/src/: App.tsx
forms/: choices.py  form_builder.py  forms.py  models.py  urls.py  views.py
forms/definitions/: consentimiento.json  escala.json
forms/migrations/: 0001_initial.py  0002_answerrecord_delete_surveysubmission.py
forms/templates/: index.html
fsdc_webapp/: asgi.py  settings.py  urls.py  wsgi.py
public/: questions.json
research_bank/: apps.py  urls.py  views.py
research_bank/templates/: entry_list.html
src/: App.test.tsx  App.tsx  coffeeQuestionare.tsx  index.css  index.tsx  reportWebVitals.ts  test2.tsx  testing.tsx
src/components/: Footer.tsx  GraphComponent.tsx  Header.tsx  Questionaire.tsx  Questionnaire.tsx  Title.tsx
src/pages/: FoodGraphPage.tsx  GraphPage.tsx  MyPlateGraphPage.tsx  NutritionGraphPage.tsx  (+2 more)
(+24 files in other folders)
